--- a/magtech dihub/index.html
+++ b/magtech dihub/index.html
@@ -78,7 +78,7 @@
                         </a>
                     </span>
                     <span class="fa-stack">
-                        <a href="#your-link">
+                        <a href="https://twitter.com/Alamin_Magaga">
                             <i class="fas fa-circle fa-stack-2x"></i>
                             <i class="fab fa-twitter fa-stack-1x"></i>
                         </a>
